syntax = "proto3";

option csharp_namespace = "GrpcService";

package greet;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// Определение серсива
service Greeter {
    rpc GetListUsers(google.protobuf.Empty) returns (ListUserReply); 
    rpc GetAllUserFromFile(GetAllUserFromFieleRequest) returns (ListUserReply);
    rpc AddUserFromFile(GetAllUserFromFieleRequest) returns (CreateUserReply);
    rpc AddUser(UserReply) returns (CreateUserReply);
    rpc UpdateUser(UserReply) returns (CreateUserReply);
    rpc GetUserById(GetUserRequest) returns (UserReply);
    rpc DeleteUser(UserReply) returns (DeleteUserReply);
}

///Пользователь
message UserReply{
    int32 Id = 1;
	string FirstName = 2;
    string Lastname = 3;
    string Secondname = 4;
    google.protobuf.Timestamp Birthdaydate = 5;
    google.protobuf.BoolValue Children = 6;
}

//Request
message GetUserRequest{
    int32 Id = 1;
}

message AddUserRequest{
    repeated UserReply Users = 1;
}

message GetAllUserFromFieleRequest{
    string path = 1;
}


//Reply
message ListUserReply{
	repeated UserReply Users = 1;
}

message CreateUserReply{
	bool succes = 1;
}

message DeleteUserReply{
	bool succes = 1;
}

